--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SAFARISAFARIMAG</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
-  <body>
+  <body>    
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./images/logo2.png">
+        <nav>
+          <a class="link" href="#home">HOME</a>
+          <a class="link" href="#news">NEWS</a>
+          <a class="link" href="#interviews">INTERVIEWS</a>
+          <a class="link" href="#about">ABOUT</a>
+        </nav>
     </header>
 
-    <section class="big-news">
       <!-- The big news content -->
-    </section>
 
-    <section class="">
+    <main>
+      <section class ="frontpage">
+        <div class="frontpage-container">
+            <a href="#johndoe">
+              <img class ="big-picture" src="images/pic.jpg">
+            </a>
+            <h1><a href ="#johndoe">THE LATEST STYLE</a></h1>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam repellendus at quam, illo excepturi itaque repellat facere ab reprehenderit necessitatibus eos mollitia eum beatae eveniet suscipit fugiat minima amet tempora."</p>
+        </div>
+      </section>
+
       <!-- The other news  -->
-    </section>
+
+      <div class="article-header">
+        <h1>What’s new</h1>
+      </div>
+
+      <section class ="article-container">
+        <div class ="article one">
+          <a href="#one">
+            <img class="article-pictures" src="images/ett.jpg" alt="article picture">
+          </a>
+          <h2>THE NEXT STEPS FOR BJÖRKLIDEN FJÄLLBY</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam quos reprehenderit accusantium. Odit quasi delectus magnam dignissimos accusamus exercitationem tempora quibusdam iusto voluptates, nulla rerum, assumenda tempore blanditiis labore?</p>
+        </div>
+
+        <div class ="article two">
+          <a href="#two">
+            <img class="article-pictures" src="images/tva.jpg">
+          </a>
+          <h2>DIY</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eveniet quia rerum delectus consectetur ducimus quod, iusto modi repudiandae qui minus quos, cumque porro similique pariatur temporibus, asperiores voluptatem laborum.</p>
+        </div>
+
+        <div class ="article three">
+          <a href="#three">
+            <img class="article-pictures" src="images/tre.jpg">
+          </a>
+          <h2>GREAT TIMES AHEAD</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatum animi voluptatem illo similique eaque harum repellat delectus quas nihil odio accusantium consequatur perspiciatis, iusto excepturi earum dolores nulla sit?</p>
+        </div>
+
+        <div class ="article four">
+          <a href="#four">
+            <img class="article-pictures" src="images/fyra.jpg">
+          </a>
+          <h2>THE MIDDLE OF THE DAY IS THE BEST TIME TO SKATE</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam saepe praesentium laborum repellendus, accusamus non debitis magnam amet. Nostrum rerum est accusantium, blanditiis porro doloremque vitae at cum nisi molestias.</p>
+        </div>
+
+        <div class ="article five">
+          <a href="#five">
+            <img class="article-pictures" src="images/fem.jpg">
+          </a>
+          <h2>INTERVIEW NR #27</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius repellat, sed est odit quisquam esse eaque magnam, quam molestias quod similique corporis libero voluptas maxime assumenda aspernatur hic sint cum.</p>
+        </div>
+
+        <div class ="article six">
+          <a href="#six">
+            <img class="article-pictures" src="images/sex.jpg">
+          </a>
+          <h2>DUNDRET IS TUNING UP</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quis esse consectetur dolor quas similique quisquam. Architecto reprehenderit fugiat provident quo mollitia, soluta corporis nihil saepe animi, dolores, suscipit enim?</p>
+        </div>
+        
+        <div class ="article seven">
+          <a href="#seven">
+            <img class="article-pictures" src="images/sju.jpg">
+            </a>
+          <h2>INTERVIEW NR #28</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ullam recusandae necessitatibus beatae reprehenderit illo, dignissimos magnam praesentium quibusdam nemo iste laborum est? Porro tempore harum animi eveniet eligendi quibusdam?</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
+
