made the header fixed to the top and reaaranged the bignews section for responsive versions

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <header>
-    <img class="logo" src="./images/logo.svg" />
+    <img class="logo order-5" src="./images/logo.svg" />
     <nav>
       <a class="order-1" href="#">About</a>
       <a class="order-2" href="#">Subscribe</a>
@@ -51,6 +51,24 @@
           ></a
         >
         <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+        <a class="gallery-item" href="#"
+          ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+        <a class="gallery-item" href="#"
           ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
@@ -122,6 +140,16 @@
 
         <a class="gallery-item" href="#"
           ><img src="./images/1.jpg" alt="Headshot of George Washington" /><span
+            class="text-wrapper"
+            ><span class="title">It is just science, baby!</span
+            ><span class="explanation"
+              >I'm baby tbh letterpress polaroid, asymmetrical roof party.</span
+            ></span
+          ></a
+        >
+
+        <a class="gallery-item" href="#"
+          ><img src="./images/2.jpg" alt="Headshot of George Washington" /><span
             class="text-wrapper"
             ><span class="title">It is just science, baby!</span
             ><span class="explanation"
