Fixed typos. Cleaned code. Updated readme file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+<!-- Logo and navbar -->
       <img class="logo" src="./images/logo.png" alt="skreppa logo">
       <div class="hamburger">
         <div></div>
@@ -24,12 +24,14 @@
         <a href="#">SUBSCRIBE</a>
       </nav>
     </header>
- <!-- The big news content -->
+
+<!-- The big news content -->
     <section class="big-news-main">
       <div class ="big-news-image">
         <img class = "image-big" src="./images/horse.PNG" alt="iclandic horse">
-        <p class="description">You could be ridning horses every damn day</p>
+        <p class="description">You could be riding horses every damn day</p>
       </div>
+
       <div class ="big-news-news">
         <h2> FIND THE COOLEST SPOTS ON ICELAND</h2>
         <p class="big-news-text"> It’s a filming location for “Game of Thrones,”, it’s the home of Björk, and 54.4% of the nation believes that elves and trolls live in the countryside! 
@@ -38,9 +40,8 @@
       </div>
     </section>
 
-    <!-- The other news  -->
+<!-- The other news  -->
     <section class="other-news-main">
-
       <div class="other-news1 pic-effect">
         <div class="pic-frame">
           <img class="image-news1" src="./images/waterfall.png" alt="iclandic waterfall">
@@ -76,7 +77,7 @@
     </section>
 
     <footer>
-      <div class="test">
+      <div class="animation-footer">
       <p> This page was made as part of the Technigo front-end developer boot camp Fall 2020.</p>
       <p>Images and &copy; JOHANNA BLOM</p>
       </p>
