edit readme to include description of my project

--- a/code/index.html
+++ b/code/index.html
@@ -23,10 +23,11 @@
     <main>
       <section class ="frontpage">
         <div class="frontpage-container">
-            <a href="#johndoe">
+          <h1>SAFARI SAFARI MAGAZINE</h1>  
+          <a href="#johndoe">
               <img class ="big-picture" src="images/pic.jpg">
             </a>
-            <h1><a href ="#johndoe">THE LATEST STYLE</a></h1>
+            <h2><a href ="#johndoe">THE LATEST STYLE</a></h2>
             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam repellendus at quam, illo excepturi itaque repellat facere ab reprehenderit necessitatibus eos mollitia eum beatae eveniet suscipit fugiat minima amet tempora."</p>
         </div>
       </section>
@@ -97,4 +98,3 @@
     </main>
   </body>
 </html>
-
