Created newsite for mobile, tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,62 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Donna</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Some kind of logo and navbar --><h1></h1>
+      <img id="Home"class="Logo" src="../Images/Logo Donna.png" alt="Donna">
+        <br>
+        <br>
+      <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+       
+        <nav>
+          <a href="#">Fashion</a>
+          <a href="#">Beauty </a>
+          <a href="#">Lifestyle</a>
+          <a href="#">About Us</a>
+        </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+     <img src="../Images/Fashion show image.jpg" alt="Fashion Show">
+      <p>Versace Spring 2021 fashion show was held yesterday in Milano.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non viverra erat. Cras eget enim at lorem gravida fringilla. Vestibulum lacinia arcu laoreet auctor consectetur. Fusce euismod dictum ante sed semper. Quisque laoreet efficitur enim egestas luctus. Cras dignissim vitae mi eget pharetra. Cras at metus dictum, euismod neque non, ultrices felis. Sed mollis semper lacus, ut varius nisl aliquet eget. Nunc semper vulputate viverra. Morbi eu elit elementum, iaculis quam eu, imperdiet dolor. Nullam consequat efficitur massa vel blandit. Aenean mattis nisl sit amet ullamcorper pellentesque. Donec imperdiet neque est. Proin bibendum ligula vitae lectus aliquet, sed venenatis velit porttitor. Curabitur semper quam non dui varius pulvinar.
+
+        
+      </p>
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+      <div>
+        <img class="blue-shoes"src="../Images/Shoes image.jpg" alt="Blue high heel shoes">
+        <p>The latest trends in shoes. This summer it´s all about colors, colors and more colors</p>
+      </div>
+      <div>
+        <img src="../Images/Make up image.jpg" alt="Girl with makeup">
+        <p>This season your make up is about less is more. Rosy lips, simple eye make up and a slight touch of blush to give that natural look.</p>
+      </div>
+      <div>
+        <img src="../Images/Designer image.jpg" alt="Female designer">
+        <p>Meet the designer that is the talk of town all around the world. Donna had the opportunity of doing an exlusive interview with Lala Fernandez. </p>
+      </div>  
+      <div>  
+        <img src="../Images/Paddleboard Yoga image.jpg" alt="Girl head stand on a paddleboard">
+        <p>Our lifestyle expert Laura Bocelli tried out the popular work out activity Paddleboard Yoga. </p>
+      </div>
     </section>
+     <footer>
+      <button><a href="#Home">Back to the top</a></button>
+    </footer>
   </body>
 </html>
