--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>in-season</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" type="image/png" href="image/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
