cleaned up code a bit

--- a/code/index.html
+++ b/code/index.html
@@ -23,12 +23,18 @@
     <main>
       <section class ="frontpage">
         <div class="frontpage-container">
-          <h1>SAFARI SAFARI MAGAZINE</h1>  
-          <a href="#johndoe">
-              <img class ="big-picture" src="images/pic.jpg">
+          <h1>
+            SAFARI SAFARI MAGAZINE
+          </h1>  
+            <a href="#johndoe">
+              <img class ="frontpage-picture" src="images/pic.jpg">
             </a>
-            <h2><a href ="#johndoe">THE LATEST STYLE</a></h2>
-            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam repellendus at quam, illo excepturi itaque repellat facere ab reprehenderit necessitatibus eos mollitia eum beatae eveniet suscipit fugiat minima amet tempora."</p>
+            <h2>
+              <a href ="#johndoe">THE LATEST STYLE</a>
+            </h2>
+            <p>
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam repellendus at quam, illo excepturi itaque repellat facere ab reprehenderit necessitatibus eos mollitia eum beatae eveniet suscipit fugiat minima amet tempora."
+            </p>
         </div>
       </section>
 
@@ -39,60 +45,88 @@
       </div>
 
       <section class ="article-container">
-        <div class ="article one">
+        <div class ="article">
           <a href="#one">
             <img class="article-pictures" src="images/ett.jpg" alt="article picture">
           </a>
-          <h2>THE NEXT STEPS FOR BJÖRKLIDEN FJÄLLBY</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam quos reprehenderit accusantium. Odit quasi delectus magnam dignissimos accusamus exercitationem tempora quibusdam iusto voluptates, nulla rerum, assumenda tempore blanditiis labore?</p>
+          <h2>
+            THE NEXT STEPS FOR BJÖRKLIDEN FJÄLLBY
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam quos reprehenderit accusantium. Odit quasi delectus magnam dignissimos accusamus exercitationem tempora quibusdam iusto voluptates, nulla rerum, assumenda tempore blanditiis labore?
+          </p>
         </div>
 
-        <div class ="article two">
+        <div class ="article">
           <a href="#two">
             <img class="article-pictures" src="images/tva.jpg">
           </a>
-          <h2>DIY</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eveniet quia rerum delectus consectetur ducimus quod, iusto modi repudiandae qui minus quos, cumque porro similique pariatur temporibus, asperiores voluptatem laborum.</p>
+          <h2>
+            DIY
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eveniet quia rerum delectus consectetur ducimus quod, iusto modi repudiandae qui minus quos, cumque porro similique pariatur temporibus, asperiores voluptatem laborum.
+          </p>
         </div>
 
-        <div class ="article three">
+        <div class ="article">
           <a href="#three">
             <img class="article-pictures" src="images/tre.jpg">
           </a>
-          <h2>GREAT TIMES AHEAD</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatum animi voluptatem illo similique eaque harum repellat delectus quas nihil odio accusantium consequatur perspiciatis, iusto excepturi earum dolores nulla sit?</p>
+          <h2>
+            GREAT TIMES AHEAD
+          </h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae dicta molestiae alias. Omnis aperiam minima est nam voluptatum laudantium provident, consequuntur natus qui, ut necessitatibus ex atque corrupti ab quasi.
+          </p>
         </div>
 
-        <div class ="article four">
+        <div class ="article">
           <a href="#four">
             <img class="article-pictures" src="images/fyra.jpg">
           </a>
-          <h2>THE MIDDLE OF THE DAY IS THE BEST TIME TO SKATE</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam saepe praesentium laborum repellendus, accusamus non debitis magnam amet. Nostrum rerum est accusantium, blanditiis porro doloremque vitae at cum nisi molestias.</p>
+          <h2>
+            THE MIDDLE OF THE DAY IS THE BEST TIME TO SKATE
+          </h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam saepe praesentium laborum repellendus, accusamus non debitis magnam amet. Nostrum rerum est accusantium, blanditiis porro doloremque vitae at cum nisi molestias.
+          </p>
         </div>
 
-        <div class ="article five">
+        <div class ="article">
           <a href="#five">
             <img class="article-pictures" src="images/fem.jpg">
           </a>
-          <h2>INTERVIEW NR #27</h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius repellat, sed est odit quisquam esse eaque magnam, quam molestias quod similique corporis libero voluptas maxime assumenda aspernatur hic sint cum.</p>
+          <h2>
+            INTERVIEW NR #27
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius repellat, sed est odit quisquam esse eaque magnam, quam molestias quod similique corporis libero voluptas maxime assumenda aspernatur hic sint cum.
+          </p>
         </div>
 
-        <div class ="article six">
+        <div class ="article">
           <a href="#six">
             <img class="article-pictures" src="images/sex.jpg">
           </a>
-          <h2>DUNDRET IS TUNING UP</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quis esse consectetur dolor quas similique quisquam. Architecto reprehenderit fugiat provident quo mollitia, soluta corporis nihil saepe animi, dolores, suscipit enim?</p>
+          <h2>
+            DUNDRET IS TUNING UP
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quis esse consectetur dolor quas similique quisquam. Architecto reprehenderit fugiat provident quo mollitia, soluta corporis nihil saepe animi, dolores, suscipit enim?
+          </p>
         </div>
-        
-        <div class ="article seven">
+
+        <div class ="article">
           <a href="#seven">
             <img class="article-pictures" src="images/sju.jpg">
-            </a>
-          <h2>INTERVIEW NR #28</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ullam recusandae necessitatibus beatae reprehenderit illo, dignissimos magnam praesentium quibusdam nemo iste laborum est? Porro tempore harum animi eveniet eligendi quibusdam?</p>
+          </a>
+          <h2>
+            INTERVIEW NR #28
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ullam recusandae necessitatibus beatae reprehenderit illo, dignissimos magnam praesentium quibusdam nemo iste laborum est? Porro tempore harum animi eveniet eligendi quibusdam?
+          </p>
         </div>
       </section>
     </main>
