Adjusted header and nav bar

--- a/code/index.html
+++ b/code/index.html
@@ -6,22 +6,18 @@
     <title>Climate News</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./images/favicon.svg" />
-  
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
     <header>
       <section class="header-content">
         <img class="logo" src="./images/climate-news-logo.svg"> 
         <nav>
-          <div>
             <a href="#">Science</a>
             <a href="#">Activism</a>
-          </div>
-          <div>
+            <a href="#"> <img class="logo-tablet" src="./images/climate-news-logo.svg"> </a>
             <a href="#">Politics</a>
             <a href="#">Energy</a>
-          </div>
         </nav>
         <div class="hamburger">
           <div></div>
