Updated text in footer

--- a/code/index.html
+++ b/code/index.html
@@ -92,7 +92,7 @@
           <h6>Posted: August 25th, 2020</h6>
           <img class="img-small" src="https://images.unsplash.com/photo-1528741254566-d718e868201f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" 
           alt="Picture with ballons and a pink chair">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedu 
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
