added nav, added hamburger, added article section instead off div

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,25 @@
     <header>
 
       <img src="hearthnoob.png" alt="hearthnoob logo">
+
+      <div class="hamburger"> 
+
+        <div></div>
+        <div></div>
+        <div></div>
+
+      </div>
+
+      <nav>
+
+        <a href="#"> BIG ARTICLE</a>
+        <a href="#"> OTHER ARTICLES</a>
+
+      </nav>
     
     </header>
+
+      <!--introduction section-->
 
     <section class="introduction">
 
@@ -22,40 +39,40 @@
        <!--Big news section-->
     <section class="big-news">
 
-      <div>
-        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
+      <article>
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355" target="_blank">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
         
-      </div>
+      </article>
     </section>
 
       <!-- The other news section -->
     <section class="other-news">
 
-      <div>
-        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
+      <article>
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355" target="_blank">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
-      </div>
+      </article>
 
-      <div>
-        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
+      <article>
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355" target="_blank">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
-      </div>
+      </article>
 
-      <div>
-        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
+      <article>
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355" target="_blank">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
-      </div>
+      </article>
 
-      <div>
-        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355">
+      <article>
+        <a href="https://hsreplay.net/decks/#playerClasses=HUNTER&archetypes=355" target="_blank">
           <img src="toxic reinforcements.png" alt="toxic reinforcements">
         </a>
-      </div>
+      </article>
 
     </section>
 
