forgot alt text on pictures, updated

--- a/code/index.html
+++ b/code/index.html
@@ -46,7 +46,7 @@
   <section class="placeholder">
 
     <div class="large-news-container">
-      <img class="largeimg" src="./img/largenews.jpg" alt="">
+      <img class="largeimg" src="./img/largenews.jpg" alt="author-headshot">
       <div class="large-news">
 
         <h2>Afford to Divorce</h2>
@@ -70,56 +70,56 @@
     <div class="small-news">
       <h4>Column</h4>
       <p>"How to smash the patriarchy"</p>
-      <img class="small-img" src="./img/yellow.jpg" alt="">
+      <img class="small-img" src="./img/yellow.jpg" alt="happy woman">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Tech</h4>
       <p>"We need more women in the IT industry"</p>
-      <img class="small-img" src="./img/woman1.jpg" alt="">
+      <img class="small-img" src="./img/woman1.jpg" alt="woman on a sofa">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Health</h4>
       <p>"First birthcontrol without side effect"</p>
-      <img class="small-img" src="./img/health.jpg" alt="">
+      <img class="small-img" src="./img/health.jpg" alt="spiral">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Column</h4>
       <p>"The pay gap?- no more!"</p>
-      <img class="small-img" src="./img/yellow2.jpg" alt="">
+      <img class="small-img" src="./img/yellow2.jpg" alt="woman with sunglasses">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Interview</h4>
       <p>"Solo Traveling"</p>
-      <img class="small-img" src="./img/travel.jpg" alt="">
+      <img class="small-img" src="./img/travel.jpg" alt="woman in window">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Health</h4>
       <p>"Innovation health app a success" </p>
-      <img class="small-img" src="./img/flowers.jpg" alt="">
+      <img class="small-img" src="./img/flowers.jpg" alt="three women in flower field">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Anonymus</h4>
       <p>"She started her own company"</p>
-      <img class="small-img" src="./img/anonymus.jpg" alt="">
+      <img class="small-img" src="./img/anonymus.jpg" alt="women walking away">
       <a href="#"></a>
     </div>
 
     <div class="small-news">
       <h4>Business</h4>
       <p>"Super success for startup"</p>
-      <img class="small-img" src="./img/business.jpg" alt="">
+      <img class="small-img" src="./img/business.jpg" alt="group picture of women">
       <a href="#"></a>
     </div>
   </section>
@@ -132,7 +132,7 @@
       <img src="./img/now.jpg" alt="woman with sign">
       <img src="./img/pillow.jpg" alt="the future is female pillow">
       <img src="./img/kid.jpg" alt="fight like a girl sign">
-      <img src="./img/sign.jpg" alt="">
+      <img src="./img/sign.jpg" alt="smash the patriarchy sign">
 
     </div>
   </div>
@@ -147,7 +147,7 @@
 
   <footer>
     <div class="footer">
-      <img class="logo" src="./img/logo.svg">
+      <img class="logo" src="./img/logo.svg" alt="technigo logo">
     </div>
   </footer>
 
