now 8 card inst of 4

--- a/code/index.html
+++ b/code/index.html
@@ -120,6 +120,69 @@
                 </a>
             </p>
         </div>
+
+        <div class="cards">
+          <h3>Culture bird</h3>
+          <div class="side-column">
+              <a href="#"><img src="./bluebird.jpeg" alt="blue bird" width="100%"></a>
+          </div>
+          <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+              sed diam nonummy nibh euismod tincidunt ut laoreet 
+              dolore magna aliquam erat volutpat.
+              Ut wisi enim ad minim veniam, quis nostrud exerci 
+              tation ullamcorper suscipit lobortis nisl ut aliquip ex ea 
+              commodo consequa...........
+              <a href="https://www.nationalgeographic.com/animals/birds/" target="_blank">
+                  <i>Read more here</i>
+              </a>
+          </p>
+    </div>
+      <div class="cards">
+          <div class="side-column">
+              <a href="#"><img src="peacock.jpg" alt="peacock bird" width="100%"></a>
+          </div>
+          <h3>Shopping birds</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+              sed diam nonummy nibh euismod tincidunt ut laoreet 
+              dolore magna aliquam erat volutpat.
+              Ut wisi enim ad minim veniam, quis nostrud exerci 
+              commodo consequa...........
+              <a href="https://www.nationalgeographic.com/animals/birds/" target="_blank">
+                  <i>Read more here</i>
+              </a>
+          </p>
+      </div>
+      <div class="cards">
+          <h3>Fashion birds</h3>
+          <div class="side-column">
+              <a href="#"><img src="./robin.jpg" alt="robin bird" width="100%"></a>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+              sed diam nonummy nibh euismod tincidunt ut laoreet 
+              dolore magna aliquam erat volutpat.
+              Ut wisi enim ad minim veniam, quis nostrud exerci 
+              commodo consequa...........
+              <a href="https://www.nationalgeographic.com/animals/birds/" target="_blank">
+                  <i>Read more here</i>
+              </a>
+          </p>
+      </div>
+      <div class="cards">
+          <div class="side-column">
+              <a href="#"><img src="./bird.jpg" alt="bird" width="100%"></a>
+          </div>
+          <h3>Beauty birds</h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+              sed diam nonummy nibh euismod tincidunt ut laoreet 
+              dolore magna aliquam erat volutpat.
+              Ut wisi enim ad minim veniam, quis nostrud exerci 
+              commodo consequa...........
+              <a href="https://www.nationalgeographic.com/animals/birds/" target="_blank">
+                  <i>Read more here</i>
+              </a>
+          </p>
+      </div>
+
     </div>
 
     <footer>
