Updated logo, fixed big news image

--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,6 @@
   <title>The New Forker</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="icon" type="image/png" href="./noun_fork.png"/>
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
@@ -17,16 +16,14 @@
       <div></div>
       <div></div>
     </div>
-    <img class="header-image" src="./The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
-    <!-- <img class="header-image" src="./The_New_Yorker_logo.png" alt="The New Yorker logo" /> -->
+    <img class="header-image" src="./The_New_Forker_logo.png" alt="The New Forker logo" />
     <nav>
       <a href="#">Books & Culture</a>
       <a href="#">Crossword</a>
-      <a href="#"><img class="nav-image" src="./The_New_Yorker_Logo.svg" alt="The New Yorker logo" /></a> <!--odstrani, ce ne deluje-->
+      <a href="#"><img class="nav-image" src="./The_New_Forker_logo.png" alt="The New Forker logo" /></a>
       <a href="#">Goings On</a>
       <a href="#">Fiction & Poetry</a>
     </nav>
-    <!-- Some kind of logo and navbar (in the header)-->
   </header>
   <main>
     <!-- The big news content -->
