--- a/code/index.html
+++ b/code/index.html
@@ -12,11 +12,10 @@
   <body>
     <!-- Header with logo and navbar -->
     <header>
-      <a>
+      <a href="#">
         <img class="menu" src="./Images/menu_icon.svg" alt="menu image">
       </a>
       <div class="logo"></div>
-
       <nav>
         <div>
           <a href="#">ARCHIVE</a>
@@ -33,9 +32,9 @@
     <section class="big-news">
       <h1>WHAT'S NEW IN THE CUPCAKE UNIVERSE?</h1>
       <div class="big-text-div">
-        <img src="./Images/pic2_unsplash.jpg" alt="water image">
+        <img src="./Images/pic2_unsplash.jpg" alt="Cupcake image">
         <div>
-          <h2>News news news</h2>
+          <h2>Here is some BIG news</h2>
           <p>
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna 
@@ -53,57 +52,58 @@
     <!-- SMALL NEWS SECTION  -->
     <section class="small-news-container">
       <div class="grid-1 grid">
-        <img src="./Images/pic1_unsplash.jpg" alt="">
-        <p>
-          Sprinkles will take your cupcakes to the next level.<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic1_unsplash.jpg" alt="Cupcake image">
+        <p>Sprinkles will take your cupcakes to the next level.</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-2 grid">
-        <img src="./Images/pic3_unsplash.jpg" alt="">
+        <img src="./Images/pic3_unsplash.jpg" alt="Cupcake image">
         <p>
-          The perfect cupcakes for your birthday? Here's what you need to know!<br><a>Read More</a>
-        </p>
+          The perfect cupcakes for your birthday? Here's what you need to know!</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-3">
-        <img src="./Images/pic4_unsplash.jpg" alt="">
-        <p>
-          Find out how to make the tastiest frosting.<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic4_unsplash.jpg" alt="Cupcake image">
+        <p>Find out how to make the tastiest frosting.</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-4">
-        <img src="./Images/pic5_unsplash.jpg" alt="">
-      <p>
-        New movie out now, 'The cupcakes takes manhattan'!<br><a>Read More</a>
-      </p>
+        <img src="./Images/pic5_unsplash.jpg" alt="Cupcake image">
+        <p>New movie out now, 'The cupcakes takes manhattan'!</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-5">
-        <img src="./Images/pic6_unsplash.jpg" alt="">
-        <p>
-          How to get the perfect swirls on your cupcakes!<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic6_unsplash.jpg" alt="Cupcake image">
+        <p>How to get the perfect swirls on your cupcakes!</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-6">
-        <img src="./Images/pic7_unsplash.jpg" alt="">
-        <p>
-          There is a cupcake for every occasion!<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic7_unsplash.jpg" alt="Cupcake image">
+        <p>There is a cupcake for every occasion!</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-7">
-        <img src="./Images/pic8_unsplash.jpg" alt="">
-        <p>
-          Manuela shares her passion for baking, what is her best advice?<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic8_unsplash.jpg" alt="Cupcake image">
+        <p>Manuela shares her passion for baking, what is her best advice?</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
       <div class="grid-8">
-        <img src="./Images/pic9_unsplash.jpg" alt="">
-        <p>
-          News 8<br><a>Read More</a>
-        </p>
+        <img src="./Images/pic9_unsplash.jpg" alt="Cupcake image">
+        <p>10 things to know before you start baking!</p>
+        <br>
+        <a href="#">Read More</a>
       </div>
     </section>
 
     <footer>
-      <p>Technigo project 2, the news site, by Anna Hellqvist</p>
+      <p>Technigo project 2, the news site, by <a href="https://www.linkedin.com/in/anna-hellqvist-62168466/">Anna Hellqvist</a></p>
     </footer>
   </body>
 </html>
